<resources>
    <string name="app_name">ประวัติส่วนตัว</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_yes">SelectYesActivity</string>
    <string name="title_activity_user_agree">ข้อตกลงในการใช้งานแอพพลิเคชั่น</string>

    <string name="validation_idCard">รหัสบัตรประชาชนไม่ถูกต้อง</string>


    <!-- layout user agree-->
    <string name="header_user_agree"><u>แบบบันทึกคัดกรองความเสี่ยงโรคเบาหวานและความดันโลหิตสูง</u></string>
    <string name="age_14_to_34_years">อายุ 14 - 34 ปี</string>
    <string name="age_35_years_up">อายุ 35 ปีขึ้นไป</string>
    <string name="rule">เฉพาะผู้ไม่เป็นผู้ป่วยเบาหวานและความดันโลหิตสูง</string>
    <string name="agree">ยอมรับ</string>
    <string name="no">ไม่ยอมรับ</string>
    <string name="btn_go">ตกลง</string>
    <string name="btn_save">บันทึก</string>


    <!-- layout menu button-->
    <string name="personal_information">ประวัติส่วนตัว</string>
    <string name="screen_age_14_to_34_years">แบบคัดกรองโรคเบาหวาน</string>
    <string name="screen_age_35_years_up">แบบคัดกรองโรคความดันโลหิตสูง</string>
    <string name="result">แปลผล</string>



    <string name="title_activity_menu_button">เมนู</string>
    <string name="title_activity_screen_age14to34_years">แบบคัดกรอง อายุ 14 - 34 ปี</string>
    <string name="title_activity_screen_age35_years_up">แบบคัดกรอง อายุ 35 ปี ขึ้นไป</string>
    <string name="title_activity_result">ประมวลผลการทดสอบ</string>


    <!-- Question -->
    <string-array name="Question">
        <!-- Question 14 to 34 years  -->
        <item>มีพ่อ  แม่  พี่หรือน้อง เป็นโรคเบาหวาน</item>
        <item>มีภาวะอ้วน(ดัชนีมวลกาย >25 กก/ตร.ม)  หรือ เอวเกิน ชาย > 90 ซม.  หญิง > 80  ซม.</item>
        <item>มีภาวะความดันโลหิตสูง  BP  > = 140/90 MmHg หรือเคยมีประวัติเป็นโรคความดันโลหิตสูง</item>
        <item>มีรอยพับรอบคอหรือใต้รักแร้ดำ</item>
        <!-- Question 35 years up -->
        <item>มีประวัติหรือเคยมีประวัติน้ำตาลในเลือดสูง</item>
        <item>มีภาวะไขมันในเลือดผิดปกติ (ไตรกลีเซอไรด์)  ≥250 มก./ดล. และ/หรือ เอส ดี แอล  &#60;35 มก./ดล.</item>
        <item>มีประวัติเป็นเบาหวานขณะตั้งครรภ์หรือมีประวัติการคลอดบุตรที่น้ำหนักตัวแรกคลอด >  4  กิโลกรัม</item>


    </string-array>


    <string-array name="header">
        <item>แบบบันทึกคัดกรองความเสี่ยงโรคเบาหวาน อายุ 35 ปีขึ้นไป</item>
        <item>แบบบันทึกคัดกรองความเสี่ยงโรคเบาหวาน อายุ 14 - 34 ปีขึ้นไป</item>
    </string-array>

    <string name="next">ข้อถัดไป</string>
    <string name="back">ข้อก่อนหน้า</string>

    <string name="rbn_yes">ใช่</string>
    <string name="rbn_no">ไม่ใช่</string>
    
    <string name="result_normal">กลุ่มปกติ</string>
    <string name="advice_one">1. ให้ตรวจสุขภาพปีละ 1 ครั้ง</string>
    <string name="advice_two">2. ปฏิบัติตัวตามหลัก 3อ2ส</string>
    <string name="two_one">- การบริโภคอาหารควรลด หวาน มัน เค็ม</string>
    <string name="two_two">- ออกกำลังกายวันละ 30 นาที อย่างน้อย 5 วัน/สัปดาห์</string>
    <string name="two_three">- มีอารมณ์ ไม่เครียด</string>
    <string name="two_four">- ไม่สูบบุหรี่/ดื่มสุรา</string>

    <string name="result_risk">กลุ่มเสี่ยง</string>
    <string name="advice_check">1. ให้ตรวจเลือดซ้ำอีก 2 สัปดาห์ ถ้า DTX &#60; 126 มก./ดล. ต้องพบแพทย์เพื่อวินิจฉัยโรค แต่ภายใน 2 สัปดาห์ถ้าหากค่า TDX > 100 มก./ดล. ลงมา ให้ปรับเปลี่ยนพฤติกรรมและตรวจซ้ำทุก 6 เดือน   </string>
    <string name="advice_change">3. เข้าค่ายปรับเปลี่ยนพฤติกรรม 3อ2ส</string>
    
    <string name="you_not_risk">คุณไม่มีความเสี่ยงที่จะเป็นโรคเบาหวาน</string>
    <string name="you_risk">คุณมีความเสี่ยงที่จะเป็นโรคเบาหวาน</string>
    <string name="advice">คำแนะนำ</string>

    <string name="title_activity_result_not_risk">คำแนะนำสำหรับกลุ่มปกติ</string>
    <string name="title_activity_result_risk">คำแนะนำสำหรับกลุ่มเสี่ยง</string>
    <string name="title_activity_select14to34_or35up">Select14to34Or35up</string>
    <string name="title_activity_screen_hypertension">แบบคัดกรองความเสี่ยงโรคความดันโลหิตสูง</string>

    <string name="tv_hypertension">ความดันโลหิต</string>
    <string name="title_activity_question_one">QuestionOne</string>


    <!--Hypertension Question-->
    <string name="tv_headerScreenHypertension">แบบสอบถามพฤติกรรม</string>
    <string name="q1">1. <u>บิดาหรือมารดา</u>ของท่านมีประวัติการป่วยโรคใดหรือไม่</string>
    <string name="q2">2. พี่น้อง(สายตรง) มีประวัติเจ็บป่วยด้วยโรค</string>
    <string name="q3">3. ท่านมีประวัติเจ็บป่วยต้องพบแพทย์หรือไม่</string>
    <string name="q4">4. กรณีท่านมีประวัติการเจ็บป่วยตามข้อที่ผ่านมา ท่านจะปฏิบัติตนอย่างไร</string>
    <string name="q5">5. ท่านสูบบุหรี่หรือไม่</string>
    <string name="q6">6. ท่านดื่มเครื่องดื่มแอลกอฮอล์หรือไม่</string>
    <string name="q7">7. ท่านออกกำลังกาย/เล่นกีฬา</string>
    <string name="q8">8. ท่านชอบอาหารรสใด</string>

    <!--Choice No.1-->
    <string name="ch1_1">เบาหวาน</string>
    <string name="ch1_2">ความดันโลหิตสูง</string>
    <string name="ch1_3">โรคเกาท์</string>
    <string name="ch1_4">ไตวายเรื้อรัง</string>
    <string name="ch1_5">กล้ามเนื้อหัวใจตาย</string>
    <string name="ch1_6">เส้นเลือดสมอง</string>
    <string name="ch1_7">ถุงลมโป่งพอง</string>
    <string name="ch1_8">ไม่ทราบ</string>
    <string name="ch1_9">อื่นๆ</string>

    <!--Choice No.2-->
    <string name="ch2_1">เบาหวาน</string>
    <string name="ch2_2">ความดันโลหิตสูง</string>
    <string name="ch2_3">โรคไต</string>
    <string name="ch2_4">กล้ามเนื้อหัวใจตาย</string>
    <string name="ch2_5">เส้นเลือดสมอง</string>
    <string name="ch2_6">ถุงลมโป่งพอง</string>
    <string name="ch2_7">ไม่ทราบ</string>
    <string name="ch2_8">อื่นๆ</string>

    <!--Choice No.3-->
    <string name="ch3_31">มี</string>
    <string name="ch3_32">ไม่มี</string>
    <string name="ch3_33">ไม่เคยตรวจ</string>
    <string name="ch3_1">โรคเบาหวาน(DM)</string>
    <string name="ch3_2">โรคความดันโลหิตสูง (HT)</string>
    <string name="ch3_3">โรคตับ</string>
    <string name="ch3_4">โรคอัมพาต</string>
    <string name="ch3_5">โรคหัวใจ</string>
    <string name="ch3_6">ไขมันในเลือดผิดปกติ</string>
    <string name="ch3_7">แผลที่เท้า/ตัดขา(จากเบาหวาน)</string>
    <string name="ch3_8">คลอดบุตรน้ำหนักเกิน  4  กิโลกรัม</string>
    <string name="ch3_9">ดื่มน้ำบ่อยและมาก</string>
    <string name="ch3_10">ปัสสาวะกลางคืน  3  ครั้ง  ขึ้นไป</string>
    <string name="ch3_11">กินจุแต่ผอมลง</string>
    <string name="ch3_12">น้ำหนักลดอ่อนเพลีย</string>
    <string name="ch3_13">เป็นแผลริมฝีปากบ่อยและหายยาก</string>
    <string name="ch3_14">คันตามผิวหนังและอวัยวะสืบพันธุ์</string>
    <string name="ch3_15">ตาพร่ามัวต้องเปลี่ยนแว่นบ่อย</string>
    <string name="ch3_16">ชาปลายมือปลายเท้าโดยไม่ทราบสาเหตุ</string>

    <!--Choice No.4-->
    <string name="ch4_1">รับการรักษาอยู่/ปฏิบัติตามที่แพทย์แนะนำ</string>
    <string name="ch4_2">รับการรักษาแต่ไม่สม่ำเสมอ</string>
    <string name="ch4_3">เคยรักษาขณะนี้ไม่รักษา / หายาทานเอง</string>


    <!--Choice No.5-->
    <string name="ch5_1">สูบ</string>
    <string name="ch5_2">ไม่สูบ</string>
    <string name="ch5_3">เคยสูบแต่เลิกแล้ว</string>

    <!--Choice No.6-->
    <string name="Ch6_1">ดื่ม</string>
    <string name="Ch6_2">ไม่ดื่ม</string>
    <string name="Ch6_3">เคยดื่มแต่เลิกแล้ว</string>

    <!--Choice No.7-->
    <string name="ch7_1">ไม่ออกกำลังกาย</string>
    <string name="ch7_2">ออกกำลังกายน้อยกว่า สัปดาห์ละ  3  ครั้ง</string>
    <string name="ch7_3">ออกกำลังกาย สัปดาห์ละ  3  ครั้ง  ครั้งละ  30  นาที  สม่ำเสมอ</string>
    <string name="ch7_4">ออกกำลังกาย สัปดาห์ละมากกว่า  3  ครั้ง  ครั้งละ  30  นาที  สม่ำเสมอ</string>
    <string name="ch7_5">ออกกำลังกายทุกวัน  ครั้งละ  30  นาที</string>

    <!--Choice No.8-->
    <string name="ch8_1">หวาน</string>
    <string name="ch8_2">เค็ม</string>
    <string name="ch8_3">มัน</string>
    <string name="ch8_4">ไม่ชอบทุกข้อ</string>
    <string name="title_activity_question_two">QuestionTwo</string>
    <string name="title_activity_question_four">QuestionFour</string>
    <string name="title_activity_question_five">QuestionFive</string>
    <string name="title_activity_question_six">QuestionSix</string>
    <string name="title_activity_question_seven">QuestionSeven</string>
    <string name="title_activity_question_eight">QuestionEight</string>
    <string name="title_activity_question_three">QuestionThree</string>


</resources>
