<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.dev.bkk.ncd.hypertension.QuestionOneFragment"    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_headerScreenHypertension"
        android:id="@+id/tv_headerQ1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:id="@+id/tv_q1"
        android:layout_below="@+id/tv_headerQ1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <!--<RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_q1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="49dp"
        android:id="@+id/rgp_ch1">-->

        <LinearLayout
            android:id="@+id/ll_anwser_question_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tv_q1"
            android:layout_marginTop="49dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">



        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbn_ch1"
            android:checked="false"
            android:text="@string/ch1_1"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch1_2"
            android:id="@+id/rbn_ch2"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch1_3"
            android:id="@+id/rbn_ch3"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch1_4"
            android:id="@+id/rbn_ch4"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch1_5"
            android:id="@+id/rbn_ch5"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch1_6"
            android:id="@+id/rbn_ch6"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch1_7"
            android:id="@+id/rbn_ch7"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch1_8"
            android:id="@+id/rbn_ch8"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch1_9"
            android:id="@+id/rbn_ch9"
            android:layout_below="@+id/rbn_ch9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false"
            />

        </LinearLayout>
    <!--</RadioGroup>-->

    <Button
        android:id="@+id/btn_ok"
        android:layout_below="@+id/ll_anwser_question_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ตกลง"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
</ScrollView>