<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.dev.bkk.ncd.ResultActivityFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/result_risk"
        android:id="@+id/tv_result"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/you_risk"
        android:id="@+id/tv_you_not_risk"
        android:layout_below="@+id/tv_result"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/advice"
        android:id="@+id/tv_advice"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/tv_you_not_risk"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/advice_check"
        android:id="@+id/tv_advice_one"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/tv_advice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/advice_two"
        android:id="@+id/tv_advice_two"
        android:layout_below="@+id/tv_advice_one"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/two_one"
        android:id="@+id/tv_one"
        android:layout_below="@+id/tv_advice_two"
        android:layout_alignLeft="@+id/tv_you_not_risk"
        android:layout_alignStart="@+id/tv_you_not_risk"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/two_two"
        android:id="@+id/tv_two"
        android:layout_below="@+id/tv_one"
        android:layout_alignLeft="@+id/tv_one"
        android:layout_alignStart="@+id/tv_one" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/two_three"
        android:id="@+id/tv_three"
        android:layout_below="@+id/tv_two"
        android:layout_alignLeft="@+id/tv_two"
        android:layout_alignStart="@+id/tv_two" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/two_four"
        android:id="@+id/tv_four"
        android:layout_below="@+id/tv_three"
        android:layout_alignLeft="@+id/tv_three"
        android:layout_alignStart="@+id/tv_three" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/advice_change"
        android:id="@+id/tv_advice_three"
        android:layout_below="@+id/tv_four"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />
</RelativeLayout>
