<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.dev.bkk.ncd.UserAgreeActivityFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_header"
        android:layout_centerHorizontal="true"
        android:text="@string/header_user_agree" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age_14_to_34_years"
        android:id="@+id/tv_age14to34years"
        android:layout_below="@+id/tv_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age_35_years_up"
        android:id="@+id/tv_age35years_up"
        android:layout_below="@+id/tv_age14to34years"
        android:layout_alignLeft="@+id/tv_age14to34years"
        android:layout_alignStart="@+id/tv_age14to34years"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rule"
        android:id="@+id/tv_warning"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_warning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:id="@+id/rg_agree_or_no"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:id="@+id/rbn_agree"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/rbn_no_agree"
            android:layout_gravity="end"
            android:checked="false" />

    </RadioGroup>

</RelativeLayout>
